# TestCMake

./: CMakeLists.txt  LICENSE  README.md
libs/HeaderLib/: CMakeLists.txt
libs/HeaderLib/include/HeaderLib/: HeaderLib.hpp
libs/StaticLib/: CMakeLists.txt
libs/StaticLib/include/: StaticLib.hpp
libs/StaticLib/src/: StaticLib.cpp
src/: Main.cpp  config.h.in
